# electron-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: quality.yaml
scripts/: test_commit_format.py
src/: lib.rs
src/verifier/: mod.rs  verification_key.rs
src/verifier/near/: mod.rs
